--- a/index.html
+++ b/index.html
@@ -19,34 +19,22 @@
         <h1 class="header-title">PRYMACHENKO ART ARMOUR</h1>
         <ul class="header-list">
           <li class="header-list-item">
-            <a href="">
-              <p>Main</p>
-            </a>
+            <a href=""> Main </a>
           </li>
           <li class="header-list-item">
-            <a href="">
-              <p>Numbers</p>
-            </a>
+            <a href=""> Numbers </a>
           </li>
           <li class="header-list-item">
-            <a href="">
-              <p>Goals</p>
-            </a>
+            <a href=""> Goals </a>
           </li>
           <li class="header-list-item">
-            <a href="">
-              <p>artist</p>
-            </a>
+            <a href=""> Artist </a>
           </li>
           <li class="header-list-item">
-            <a href="">
-              <p>Auction</p>
-            </a>
+            <a href=""> Auction </a>
           </li>
           <li class="header-list-item">
-            <a href="">
-              <p>Reviews</p>
-            </a>
+            <a href=""> Reviews </a>
           </li>
         </ul>
       </nav>
@@ -532,30 +520,87 @@
           <h2 class="reviews-title">Reviews</h2>
           <div class="reviews-wrap">
             <div class="reviews-card">
-              <img src="" alt="" class="reviews-image" />
-              <h3 class="reviews-subtitle"></h3>
-              <p class="reviews-text"></p>
+              <img
+                src="./img/mavic-review.png"
+                alt="DJI MAVIC"
+                class="reviews-image"
+              />
+              <h3 class="reviews-subtitle">50 DJI Mavics</h3>
+              <p class="reviews-text">
+                The DJI Mavic Air 2 strikes a balance between portability and
+                features. With 4K/60p video and a 48MP CMOS sensor, it’s a
+                smart, efficient, and frugal choice designed for intense assault
+                operations.
+              </p>
             </div>
             <div class="reviews-card">
-              <img src="" alt="" class="reviews-image" />
-              <h3 class="reviews-subtitle"></h3>
-              <p class="reviews-text"></p>
+              <img
+                src="./img/first-aid-review.png"
+                alt="First aid"
+                class="reviews-image"
+              />
+              <h3 class="reviews-subtitle">500 First aid kits</h3>
+              <p class="reviews-text">
+                Adventure Medical Kits Ultralight/Watertight is our top pick for
+                an overall first-aid kit. It’s lightweight, compact, and
+                well-stocked for fast reacting on the combat field and further
+                medical assistance.
+              </p>
             </div>
             <div class="reviews-card">
-              <img src="" alt="" class="reviews-image" />
-              <h3 class="reviews-subtitle"></h3>
-              <p class="reviews-text"></p>
+              <img
+                src="./img/tactical-wear-review.png"
+                alt="Tactical wear"
+                class="reviews-image"
+              />
+              <h3 class="reviews-subtitle">2000 Sets of Tactical Wear</h3>
+              <p class="reviews-text">
+                Following the recent auction, we acquired more than 2000 sets of
+                tactical wear for TDFs nationwide. These new tactical wear sets
+                will enhance the readiness and effectiveness of our TDF
+                personnel.
+              </p>
             </div>
             <div class="reviews-card">
-              <img src="" alt="" class="reviews-image" />
-              <h3 class="reviews-subtitle"></h3>
-              <p class="reviews-text"></p>
+              <img
+                src="./img/camouflage-gear-review.png"
+                alt="Camouglage gear"
+                class="reviews-image"
+              />
+              <h3 class="reviews-subtitle">1000 Sets of Camouflage Gear</h3>
+              <p class="reviews-text">
+                The Kuiu Verde Proximity Line stands out as the best overall
+                choice its quietness, warmth, and durability. All that make it
+                effective for close-range encounters, which happen on a daily
+                basis across the battle field.
+              </p>
             </div>
             <div class="reviews-card">
-              <img src="" alt="" class="reviews-image" />
-              <h3 class="reviews-subtitle"></h3>
-              <p class="reviews-text"></p>
+              <img
+                src="./img/termal-imager-review.png"
+                alt="Thermal imager"
+                class="reviews-image"
+              />
+              <h3 class="reviews-subtitle">25 thermal imagers</h3>
+              <p class="reviews-text">
+                The FLIR C5 is a top choice for thermal-imaging cameras. It
+                offers a built-in screen, making it convenient for on-the-go
+                use, whether you’re a fast paratrooper or a meticulous drone
+                operator.
+              </p>
             </div>
+          </div>
+          <div class="reviews-arrows">
+            <button type="button" class="about-button">
+              <svg class="about-arrow">
+                <use href="./img/icons.svg#icon-arrow-left"></use>
+              </svg>
+            </button>
+            <button type="button" class="about-button">
+              <svg class="about-arrow">
+                <use href="./img/icons.svg#icon-arrow-right"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
@@ -570,70 +615,88 @@
       </section>
     </main>
     <footer>
-      <h2 class="header-title">PRYMACHENKO ART ARMOUR</h2>
-      <div class="footer-content">
-        <div class="footer-links">
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <div class="subscribe-form">
-            <h3 class="subscribe-title">
-              Get to know about new auctions first
-            </h3>
-            <input
-              type="email"
-              name=""
-              id=""
-              placeholder="Your email here"
-              class="form-email"
-            /><button type="submit" class="subscribe-button">Subscribe</button
-            ><label
-              ><input type="radio" name="" />I certify that I am at least 18
-              years old and that I agree to the Terms of Use and Privacy
-              Policy.</label
-            >
+      <div class="container">
+        <h2 class="footer-title">ART ARMOUR</h2>
+        <div class="footer-content">
+          <div class="footer-links">
+            <ul>
+              <li class="footer-list-item"><a href="">About Us</a></li>
+              <li class="footer-list-item"><a href="">Contact Us</a></li>
+              <li class="footer-list-item"><a href="">Blog</a></li>
+            </ul>
+            <ul>
+              <li class="footer-list-item"><a href="">Cookie Policy</a></li>
+              <li class="footer-list-item"><a href="">Data Policy</a></li>
+              <li class="footer-list-item"><a href="">Privacy Policy</a></li>
+              <li class="footer-list-item"><a href="">Terms of Use</a></li>
+            </ul>
+            <div class="subscribe-form">
+              <h3 class="subscribe-title">
+                Get to know about new auctions first
+              </h3>
+              <div class="footer-email-wrap">
+                <div class="footer-input-button">
+                  <input
+                    type="email"
+                    name=""
+                    id=""
+                    placeholder="Your email here"
+                    class="form-email"
+                  /><button type="submit" class="subscribe-button">
+                    Subscribe
+                  </button>
+                </div>
+                <div class="footer-check-wrap">
+                  <input
+                    type="checkbox"
+                    name="check"
+                    class="footer-checkbox visually-hidden"
+                  /><label class="footer-label" for="check"
+                    ><span class="footer-span"
+                      ><svg width="20" height="20">
+                        <use
+                          href="./img/icons.svg#icon-check-icon"
+                        ></use></svg></span
+                    >I certify that I am at least 18 years old and that I agree
+                    to the Terms of Use and Privacy Policy.</label
+                  >
+                </div>
+              </div>
+            </div>
           </div>
+          <ul class="social-links">
+            <li class="social-links-item">
+              <a href="">
+                <svg></svg>
+              </a>
+            </li>
+            <li class="social-links-item">
+              <a href="">
+                <svg></svg>
+              </a>
+            </li>
+            <li class="social-links-item">
+              <a href="">
+                <svg></svg>
+              </a>
+            </li>
+            <li class="social-links-item">
+              <a href="">
+                <svg></svg>
+              </a>
+            </li>
+            <li class="social-links-item">
+              <a href="">
+                <svg></svg>
+              </a>
+            </li>
+          </ul>
         </div>
-        <ul class="social-links">
-          <li class="social-links-item">
-            <a href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="social-links-item">
-            <a href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="social-links-item">
-            <a href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="social-links-item">
-            <a href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="social-links-item">
-            <a href="">
-              <svg></svg>
-            </a>
-          </li>
-        </ul>
+        <p class="policy-text">
+          Use of materials is only permitted upon providing the source. All
+          rights reserved © 2024 BO “ART ARMOUR FOUNDATION”
+        </p>
       </div>
-      <p class="policy-text">
-        Use of materials is only permitted upon providing the source. All rights
-        reserved © 2024 BO “ART ARMOUR FOUNDATION”
-      </p>
     </footer>
     <script type="module" src="/main.js"></script>
   </body>
